--- a/web/css/index.css
+++ b/web/css/index.css
@@ -85,3 +85,14 @@
 .comment-container {
     padding: 2px 16px;
 }
+
+.comment-container textarea {
+    width: 100%;
+    height: 150px;
+    padding: 12px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    resize: none;
+}
